# projects

./: .gitignore  README.MD  README.md
masters_thesis/source_codes/: readme.txt
masters_thesis/source_codes/RVE_geometry_generator/: RVE_generator_cpp_multi_inclu_RVE.py
masters_thesis/source_codes/simulation_256/: compile.sh  homo.py  homo2.py  homo3.py  homo4.py  homo_stre_str.txt  homo_stre_str2.txt  live_plot.py  nohup.out  oldnohup2  plot.py  r_live_plot.py  r_plot.py  z_stress_strain.txt
practices/C++/libtorch_study/bsm/: CMakeLists.txt  main.cpp  python_equivalent.ipynb
practices/C++/libtorch_study/bsm/.ipynb_checkpoints/: python_equivalent-checkpoint.ipynb
practices/C++/libtorch_study/libtorch_example/: CMakeLists.txt
practices/C++/pybind11/example/: CMakeLists.txt  example.cpp  example.hpp  example_test.ipynb  setup.py
practices/C++/pybind11/example/.ipynb_checkpoints/: example_test-checkpoint.ipynb
practices/C++/pybind11/example/python_cpp_example.egg-info/: PKG-INFO  SOURCES.txt
practices/C++/swig/numpy/: setup.py  (+5 more)
practices/Computational_Differentiation/heat_equation/: Makefile  O.txt  f.cpp  f.hpp  f.sh  fd.cpp  fd.sh  fd_grad  fd_grad.cpp  fd_grad.sh  gt1s  gt1s.cpp  gt1s.sh  obs.cpp
practices/apps/: twilio.ipynb
practices/apps/.ipynb_checkpoints/: music_play-checkpoint.ipynb  twilio-checkpoint.ipynb
practices/interview/DP/: Fibonacci.ipynb  min_sum_path.ipynb  stair.ipynb
practices/nocop/stl/: a.out  v  vect.cpp
practices/parallel_programming/MPI/: Isend_Recv.c  SSend_Recv.c  Send_Irecv.c  broadcast.c  ex2_gather_version.c  ex2_reduce_version.c  ex4.c  heat_eq_nonblock.c
practices/parallel_programming/OpenMP/: Monte_Carlo_pi.c
practices/parallel_programming/Python/: threading.py
practices/pytorch/: Heston_NN.py  heston_NN  inverse_problem.ipynb
practices/pytorch/.ipynb_checkpoints/: inverse_problem-checkpoint.ipynb
practices/pytorch/tutorial/: autograd_tutorial.ipynb  high-order gradient.ipynb  neural_networks_tutorial.ipynb
practices/quant/: Heston.ipynb  Heston_NN.py  Heston_chf.ipynb  Heston_data  Heston_data_backup  Heston_data_input  deep_Heston.ipynb  deep_Heston_pytorch.ipynb  heston_NN  heston_NN_intermediate  option_vol_surf.ipynb  quantlib.ipynb  test.ipynb
practices/quant/.ipynb_checkpoints/: Heston-checkpoint.ipynb  Heston_chf-checkpoint.ipynb  deep_Heston-checkpoint.ipynb  deep_Heston_keras-checkpoint.ipynb  deep_Heston_pytorch-checkpoint.ipynb  option_chain-checkpoint.ipynb  option_vol_surf-checkpoint.ipynb  surface_generator-checkpoint.ipynb  test-checkpoint.ipynb
practices/quant/FD_pricing/: BSM.ipynb
practices/quant/Heston/: Heston.ipynb  Heston_ADI.ipynb  Heston_ADI_legacy.ipynb  Heston_ADI_tri.ipynb  Heston_NN.py  Heston_chf.ipynb  Heston_data  Heston_data-backup  Heston_julia.ipynb  Heston_process.py  Heston_surface  deep_Heston_keras.ipynb  deep_Heston_pytorch-test.ipynb  deep_Heston_pytorch.ipynb  fd_adi.py  heston_NN  heston_NN_colab  heston_NN_final  heston_NN_intermediate  input_scaler.pkl  parameter_estimation.ipynb  surface_generator.ipynb
practices/quant/MC_multiasset/: CMakeLists.txt  MyTensor.hpp  README.MD  main.cpp  main.hpp  models.cpp  models.hpp  sde.cpp  sde.hpp  utils.cpp  utils.hpp
practices/quant/MC_multiasset/input/: BSM.inp  BSM.txt  Heston.inp  Heston.txt  Poisson.inp  test.inp  test.txt
practices/quant/MC_multiasset/library_tests/: a.out  json_test.cpp  poisson.cpp
practices/quant/MC_multiasset/output/: x0.csv  x1.csv
practices/quant/SLV/: SLV.ipynb
practices/quant/correlation/: CovEq3.nb  EqCorr.docx  Param_US2.csv  README.MD  US params.xlsx  derivation-test.ipynb  derivation-test.py  derivation-v1.ipynb  derivation-v3.ipynb  derivation-v4.ipynb  sym-derive.ipynb  vAvB.ipynb
practices/quant/mbs/: MBS_mc_cir-2.jl  MBS_mc_cir.jl  README.MD  cir_functions.jl  cir_study.jl  fd.jl  fd_1f.jl  fd_1f_transform.jl  fd_functions.jl  mbs_functions.jl  mc.ipynb  mc.jl
practices/quant/mc_python/: input.json  test.ipynb
practices/quant/my_model/: saved_model.pb
practices/quant/quantlib/Hagan/: CMakeLists.txt  Pricing Spread Range Accrual Note.docx  geometry.cpp  geometry.hpp  main.cpp  main.hpp  model.cpp  model.hpp  optimizer.cpp  optimizer.hpp  simulation.cpp  simulation.hpp  stochasticmodel.cpp  stochasticmodel.hpp  stochasticmodels.cpp  stochasticmodels.hpp  studies.xlsx  utils.cpp  utils.hpp  ~$studies.xlsx
practices/quant/quantlib/Hagan/data/: KRWIRS.json  LGM.json  pricing.json  swaption_vol.json
practices/quant/quantlib/Hagan/output/: M.csv  computedVol.json  dw.csv  dw_check.csv  matrix.csv  matrix_validation.csv  r.csv  r_check.csv  spread_5_10.csv
practices/quant/quantlib/Hagan/python_code/: MC_swaption.ipynb
practices/quant/quantlib/Hagan/python_code/.ipynb_checkpoints/: MC_swaption-checkpoint.ipynb
practices/quant/quantlib/OptionJump/: CMakeLists.txt  business248.cpp  business248.hpp  main.cpp
practices/quant/quantlib/test/: CMakeLists.txt  main.cpp
practices/quant/test/: CMakeLists.txt  MyTensor.cpp  MyTensor.hpp  sde.cpp  sde.hpp  utils.cpp  utils.hpp
practices/reinforcement learning/: DDPG-keras.ipynb  actor-critic.ipynb  dqn.ipynb  pytorch-multiprocess.ipynb  reinforce.ipynb  reinforcement_q_learning.ipynb
practices/reinforcement learning/.ipynb_checkpoints/: DDPG-keras-checkpoint.ipynb  actor-critic-checkpoint.ipynb  dqn-checkpoint.ipynb  pytorch-multiprocess-checkpoint.ipynb  reinforce-checkpoint.ipynb  reinforcement_q_learning-checkpoint.ipynb
practices/scientific_programming/FEM_heat_transfer/src/: CMakeLists.txt  L_lib.sh  Makefile  Makefile.old  README  Rod.0.vtk  Ta.txt  Ta_x.txt  constants.h  dco.hpp  element.cpp  element.h  gaussq.cpp  gaussq.h  ka.txt  load_key.sh  main.cpp  node.cpp  node.h  postProcessor.cpp  postProcessor.h  rod_data.txt  setting.cpp  setting.h  settings.in  solver.cpp  solver.h  utility.cpp  utility.h
udacity/: lecture.docx  ~$ecture.docx
udacity/Intro_to_CPP/: a.out
udacity/Intro_to_Memory_Mgmt/: a.out  pointer_lab_3_dynamic_array.cpp
udacity/Smart_Pointer/: a.out  gc_details.h.gch  gc_iterator.h.gch
(+327 files in other folders)
